// Vitest Snapshot v1

exports[`test input clear 1`] = `
"<div class=\\"var-input var--box\\">
  <div class=\\"var-input__controller\\">
    <div class=\\"var-input__icon\\"></div>
    <div class=\\"var-input__wrap\\">
      <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-66\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder var-input--placeholder-hint\\" for=\\"var-input-66\\"></label>
    </div>
    <div class=\\"var-input__icon\\"><i class=\\"var-icon var-icon--set var-icon-close-circle var-input__clear-icon\\" style=\\"transition: transform 0ms; font-size: 14px;\\" var-input-cover=\\"\\"></i></div>
  </div>
  <div class=\\"var-input__line\\">
    <div class=\\"var-input__dot\\"></div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input events > test input focus & blur 1`] = `
"<div class=\\"var-input var--box\\">
  <div class=\\"var-input__controller var-input--focus\\">
    <div class=\\"var-input__icon\\"></div>
    <div class=\\"var-input__wrap\\">
      <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-42\\" type=\\"text\\"><label class=\\"var--ellipsis var-input--focus var-input__placeholder var-input--placeholder-hint\\" for=\\"var-input-42\\"></label>
    </div>
    <div class=\\"var-input__icon\\">
      <!--v-if-->
    </div>
  </div>
  <div class=\\"var-input__line\\">
    <div class=\\"var-input__dot var-input--spread\\"></div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input events > test input focus & blur 2`] = `
"<div class=\\"var-input var--box\\">
  <div class=\\"var-input__controller\\">
    <div class=\\"var-input__icon\\"></div>
    <div class=\\"var-input__wrap\\">
      <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-42\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder\\" for=\\"var-input-42\\"></label>
    </div>
    <div class=\\"var-input__icon\\">
      <!--v-if-->
    </div>
  </div>
  <div class=\\"var-input__line\\">
    <div class=\\"var-input__dot\\"></div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input events > test input focus & blur 3`] = `
"<div class=\\"var-input var--box\\">
  <div class=\\"var-input__controller var-input--focus\\">
    <div class=\\"var-input__icon\\"></div>
    <div class=\\"var-input__wrap\\">
      <!--v-if--><textarea class=\\"var-input__input var-input--textarea\\" autocomplete=\\"new-password\\" id=\\"var-input-46\\" type=\\"text\\" rows=\\"8\\" style=\\"resize: none;\\">
        </textarea><label class=\\"var--ellipsis var-input--focus var-input__textarea-placeholder var-input--placeholder-hint\\" for=\\"var-input-46\\"></label>
    </div>
    <div class=\\"var-input__icon\\">
      <!--v-if-->
    </div>
  </div>
  <div class=\\"var-input__line\\">
    <div class=\\"var-input__dot var-input--spread\\"></div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input events > test input focus & blur 4`] = `
"<div class=\\"var-input var--box\\">
  <div class=\\"var-input__controller\\">
    <div class=\\"var-input__icon\\"></div>
    <div class=\\"var-input__wrap\\">
      <!--v-if--><textarea class=\\"var-input__input var-input--textarea\\" autocomplete=\\"new-password\\" id=\\"var-input-46\\" type=\\"text\\" rows=\\"8\\" style=\\"resize: none;\\">
        </textarea><label class=\\"var--ellipsis var-input__textarea-placeholder\\" for=\\"var-input-46\\"></label>
    </div>
    <div class=\\"var-input__icon\\">
      <!--v-if-->
    </div>
  </div>
  <div class=\\"var-input__line\\">
    <div class=\\"var-input__dot\\"></div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input example 1`] = `
"<div class=\\"app-type pb\\" data-v-9abe30fd=\\"\\">基本使用</div>
<div class=\\"var-input var--box\\" data-v-9abe30fd=\\"\\">
  <div class=\\"var-input__controller\\">
    <div class=\\"var-input__icon\\"></div>
    <div class=\\"var-input__wrap\\">
      <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-3\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder\\" for=\\"var-input-3\\">请输入文本</label>
    </div>
    <div class=\\"var-input__icon\\">
      <!--v-if-->
    </div>
  </div>
  <div class=\\"var-input__line\\">
    <div class=\\"var-input__dot\\"></div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>
<div class=\\"app-type pb\\" data-v-9abe30fd=\\"\\">朴素模式</div>
<div class=\\"var-input var--box\\" data-v-9abe30fd=\\"\\">
  <div class=\\"var-input__controller\\">
    <div class=\\"var-input__icon var-input--non-hint\\"></div>
    <div class=\\"var-input__wrap var-input--non-hint\\">
      <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-7\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder var-input--placeholder-non-hint\\" for=\\"var-input-7\\">请输入文本</label>
    </div>
    <div class=\\"var-input__icon var-input--non-hint\\">
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>
<div class=\\"app-type pb\\" data-v-9abe30fd=\\"\\">文本域</div>
<div class=\\"var-input var--box\\" data-v-9abe30fd=\\"\\">
  <div class=\\"var-input__controller\\">
    <div class=\\"var-input__icon\\"></div>
    <div class=\\"var-input__wrap\\">
      <!--v-if--><textarea class=\\"var-input__input var-input--textarea\\" autocomplete=\\"new-password\\" id=\\"var-input-11\\" type=\\"text\\" rows=\\"8\\" style=\\"resize: none;\\">
        </textarea><label class=\\"var--ellipsis var-input__textarea-placeholder\\" for=\\"var-input-11\\">请输入文本</label>
    </div>
    <div class=\\"var-input__icon\\">
      <!--v-if-->
    </div>
  </div>
  <div class=\\"var-input__line\\">
    <div class=\\"var-input__dot\\"></div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>
<div class=\\"app-type pb\\" data-v-9abe30fd=\\"\\">最大长度</div>
<div class=\\"var-input var--box\\" data-v-9abe30fd=\\"\\">
  <div class=\\"var-input__controller\\">
    <div class=\\"var-input__icon\\"></div>
    <div class=\\"var-input__wrap\\">
      <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-15\\" type=\\"text\\" maxlength=\\"10\\"><label class=\\"var--ellipsis var-input__placeholder\\" for=\\"var-input-15\\">请输入文本</label>
    </div>
    <div class=\\"var-input__icon\\">
      <!--v-if-->
    </div>
  </div>
  <div class=\\"var-input__line\\">
    <div class=\\"var-input__dot\\"></div>
  </div>
  <transition-stub>
    <div class=\\"var-form-details\\">
      <div class=\\"var-form-details__message\\"></div>
      <div class=\\"var-form-details__length\\">0 / 10</div>
    </div>
  </transition-stub>
</div>
<div class=\\"app-type pb\\" data-v-9abe30fd=\\"\\">禁用</div>
<div class=\\"var-input var--box var-input--disabled\\" data-v-9abe30fd=\\"\\">
  <div class=\\"var-input__controller var-input--disabled\\">
    <div class=\\"var-input__icon\\"></div>
    <div class=\\"var-input__wrap\\">
      <!--v-if--><input class=\\"var-input__input var-input--disabled\\" autocomplete=\\"new-password\\" id=\\"var-input-19\\" disabled=\\"\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder\\" for=\\"var-input-19\\">请输入文本</label>
    </div>
    <div class=\\"var-input__icon\\">
      <!--v-if-->
    </div>
  </div>
  <div class=\\"var-input__line var-input--line-disabled\\">
    <div class=\\"var-input__dot var-input--line-disabled\\"></div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>
<div class=\\"app-type pb\\" data-v-9abe30fd=\\"\\">只读</div>
<div class=\\"var-input var--box\\" data-v-9abe30fd=\\"\\">
  <div class=\\"var-input__controller\\">
    <div class=\\"var-input__icon\\"></div>
    <div class=\\"var-input__wrap\\">
      <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-23\\" disabled=\\"\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder\\" for=\\"var-input-23\\">请输入文本</label>
    </div>
    <div class=\\"var-input__icon\\">
      <!--v-if-->
    </div>
  </div>
  <div class=\\"var-input__line\\">
    <div class=\\"var-input__dot\\"></div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>
<div class=\\"app-type pb\\" data-v-9abe30fd=\\"\\">可清除</div>
<div class=\\"var-input var--box\\" data-v-9abe30fd=\\"\\">
  <div class=\\"var-input__controller\\">
    <div class=\\"var-input__icon\\"></div>
    <div class=\\"var-input__wrap\\">
      <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-27\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder var-input--placeholder-hint\\" for=\\"var-input-27\\">请输入文本</label>
    </div>
    <div class=\\"var-input__icon\\"><i class=\\"var-icon var-icon--set var-icon-close-circle var-input__clear-icon\\" style=\\"transition: transform 0ms; font-size: 14px;\\" var-input-cover=\\"\\"></i></div>
  </div>
  <div class=\\"var-input__line\\">
    <div class=\\"var-input__dot\\"></div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>
<div class=\\"app-type pb\\" data-v-9abe30fd=\\"\\">显示图标</div>
<div class=\\"var-input var--box\\" data-v-9abe30fd=\\"\\">
  <div class=\\"var-input__controller\\">
    <div class=\\"var-input__icon\\"><i class=\\"var-icon var-icon--set var-icon-plus prepend-icon\\" style=\\"transition: transform 0ms;\\" data-v-9abe30fd=\\"\\"></i></div>
    <div class=\\"var-input__wrap\\">
      <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-32\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder\\" for=\\"var-input-32\\">请输入文本</label>
    </div>
    <div class=\\"var-input__icon\\"><i class=\\"var-icon var-icon--set var-icon-minus append-icon\\" style=\\"transition: transform 0ms;\\" data-v-9abe30fd=\\"\\"></i></div>
  </div>
  <div class=\\"var-input__line\\">
    <div class=\\"var-input__dot\\"></div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>
<div class=\\"app-type\\" data-v-9abe30fd=\\"\\">字段校验</div>
<div class=\\"var-input var--box\\" data-v-9abe30fd=\\"\\">
  <div class=\\"var-input__controller\\">
    <div class=\\"var-input__icon\\"></div>
    <div class=\\"var-input__wrap\\">
      <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-38\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder\\" for=\\"var-input-38\\">请输入文本</label>
    </div>
    <div class=\\"var-input__icon\\">
      <!--v-if-->
    </div>
  </div>
  <div class=\\"var-input__line\\">
    <div class=\\"var-input__dot\\"></div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>
<div style=\\"height: 40px;\\" data-v-9abe30fd=\\"\\"></div>"
`;

exports[`test input hint to be false 1`] = `
"<div class=\\"var-input var--box\\">
  <div class=\\"var-input__controller\\">
    <div class=\\"var-input__icon var-input--non-hint\\"></div>
    <div class=\\"var-input__wrap var-input--non-hint\\">
      <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-62\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder var-input--placeholder-hidden var-input--placeholder-non-hint\\" for=\\"var-input-62\\"></label>
    </div>
    <div class=\\"var-input__icon var-input--non-hint\\">
      <!--v-if-->
    </div>
  </div>
  <div class=\\"var-input__line\\">
    <div class=\\"var-input__dot\\"></div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input maxlength 1`] = `
"<div class=\\"var-input var--box\\">
  <div class=\\"var-input__controller\\">
    <div class=\\"var-input__icon\\"></div>
    <div class=\\"var-input__wrap\\">
      <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-58\\" type=\\"text\\" maxlength=\\"100\\"><label class=\\"var--ellipsis var-input__placeholder var-input--placeholder-hint\\" for=\\"var-input-58\\"></label>
    </div>
    <div class=\\"var-input__icon\\">
      <!--v-if-->
    </div>
  </div>
  <div class=\\"var-input__line\\">
    <div class=\\"var-input__dot\\"></div>
  </div>
  <transition-stub>
    <div class=\\"var-form-details\\">
      <div class=\\"var-form-details__message\\"></div>
      <div class=\\"var-form-details__length\\">4/100</div>
    </div>
  </transition-stub>
</div>"
`;

exports[`test input validation 1`] = `
"<div class=\\"var-input var--box\\">
  <div class=\\"var-input__controller var-input--error\\">
    <div class=\\"var-input__icon\\"></div>
    <div class=\\"var-input__wrap\\">
      <!--v-if--><input class=\\"var-input__input var-input--caret-error\\" autocomplete=\\"new-password\\" id=\\"var-input-81\\" type=\\"text\\"><label class=\\"var--ellipsis var-input--error var-input__placeholder var-input--placeholder-hint\\" for=\\"var-input-81\\"></label>
    </div>
    <div class=\\"var-input__icon\\">
      <!--v-if-->
    </div>
  </div>
  <div class=\\"var-input__line var-input--line-error\\">
    <div class=\\"var-input__dot var-input--line-error\\"></div>
  </div>
  <transition-stub>
    <div class=\\"var-form-details\\">
      <div class=\\"var-form-details__message\\">长度必须大于3</div>
      <div class=\\"var-form-details__length\\"></div>
    </div>
  </transition-stub>
</div>"
`;

exports[`test input validation 2`] = `
"<div class=\\"var-input var--box\\">
  <div class=\\"var-input__controller\\">
    <div class=\\"var-input__icon\\"></div>
    <div class=\\"var-input__wrap\\">
      <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-81\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder\\" for=\\"var-input-81\\"></label>
    </div>
    <div class=\\"var-input__icon\\">
      <!--v-if-->
    </div>
  </div>
  <div class=\\"var-input__line\\">
    <div class=\\"var-input__dot\\"></div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test input validation 3`] = `
"<div class=\\"var-input var--box\\">
  <div class=\\"var-input__controller\\">
    <div class=\\"var-input__icon\\"></div>
    <div class=\\"var-input__wrap\\">
      <!--v-if--><input class=\\"var-input__input\\" autocomplete=\\"new-password\\" id=\\"var-input-81\\" type=\\"text\\"><label class=\\"var--ellipsis var-input__placeholder var-input--placeholder-hint\\" for=\\"var-input-81\\"></label>
    </div>
    <div class=\\"var-input__icon\\">
      <!--v-if-->
    </div>
  </div>
  <div class=\\"var-input__line\\">
    <div class=\\"var-input__dot\\"></div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>"
`;
